[package]
name = "minijudge-rust"
version = "0.1.0"
authors = ["Southball <jamie.choi.mail.2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"