[package]
name = "minijudge-rust"
version = "0.1.0"
authors = ["Southball <jamie.choi.mail.2002@gmail.com>"]
edition = "2018"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
handlebars = "3.0.1"
judge-definitions = { git = "https://github.com/southball/judge-definitions" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
simplelog = "0.7.4"
zmq = "0.9"